Places form fixes.

--- a/client/home.html
+++ b/client/home.html
@@ -88,7 +88,7 @@
 				<h3>Lieux</h3>
 			</div>
 			<div class="list-group">
-				{{#each places}}
+				{{#each matchPlaces}}
 				<a class="list-group-item" href="{{pathFor 'placeShow'}}">{{name}}</a>
 				{{/each}}
 			</div>
