--- a/client/home.html
+++ b/client/home.html
@@ -111,7 +111,7 @@
 		<div class="row">
 			<div class="media">
 				<div class="media-object col-sm-2 col-xs-3 pull-left">
-					<img src="{{gigThumbnail}}" alt="" class="img-rounded"/>
+					<img src="{{gigThumbnail}}" alt="Image du profil"/>
 				</div>
 				<div class="media-body">
 					<h4 class="media-heading col-sm-8">
