--- a/client/home.html
+++ b/client/home.html
@@ -1,5 +1,5 @@
 <head>
-	<title>LaMiFa</title>
+	<title>La-Mi-Fa</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 
@@ -44,8 +44,8 @@
 	{{#unless currentUser}}
 	<div class="jumbotron col-sm-11">
 		<h1>
-			<i class="icon-music"></i>
-			<strong>LaMiFa</strong>
+			<i class="fa fa-music"></i>
+			<strong>{{siteName}}</strong>
 			<small style="vertical-align:top">(αlphα)</small><br>
 			<small><i>Votez pour des lendemains qui chantent.</i></small>&nbsp;
 		</h1>
