Votes and posts.

--- a/client/home.html
+++ b/client/home.html
@@ -19,7 +19,7 @@
 
 <template name="home">
 	{{#unless currentUser}}
-	<div class="jumbotron">
+	<div class="jumbotron col-sm-9">
 		<h2>
 			<i class="fa fa-music"></i>
 			<strong>{{siteName}}</strong>
