--- a/client/home.html
+++ b/client/home.html
@@ -39,21 +39,23 @@
 
 	{{#if userPosition}}
 	<div class="row">
-		<div class="col-sm-8 col-xs-11">
-			{{>userPositionMap}}
-		</div>
-		<br>
-
-		{{#if matchGig}}
-		<br>
-		<div class="col-sm-4">
-			<div class="list-group">
-				{{#with matchGig}}
-				{{> gigItem}}
-				{{/with}}
+		<div class="container">
+			<div class="col-sm-8 col-xs-11">
+				{{>userPositionMap}}
 			</div>
+			<br>
+
+			{{#if matchGig}}
+			<br>
+			<div class="col-sm-4">
+				<div class="list-group">
+					{{#with matchGig}}
+					{{> gigItem}}
+					{{/with}}
+				</div>
+			</div>
+			{{/if}}
 		</div>
-		{{/if}}
 	</div>
 
 	<div class="row">
