Upgraded leaflet. Wow. Such improvement.

--- a/client/home.html
+++ b/client/home.html
@@ -58,6 +58,8 @@
 		</div>
 	</div>
 
+	<br>
+
 	<div class="row">
 		<div class="container">
 			<div class="page-header">
@@ -112,8 +114,8 @@
 	<div id="map" />
 	{{/constant}}<br>
 	<div class="pull-right">
-		<button id="plus" type="button" class="btn btn-default" alt="plus">&nbsp;<i class="fa fa-lg fa-plus-circle"></i>&nbsp;</button>
-		<button id="minus" type="button" class="btn btn-default" alt="moins">&nbsp;<i class="fa fa-lg fa-minus-circle"></i>&nbsp;</button>
+		<button id="minus" type="button" class="btn btn-lg btn-primary" alt="moins">&nbsp;<i class="fa fa-minus-circle"></i>&nbsp;</button>
+		<button id="plus" type="button" class="btn btn-lg btn-primary" alt="plus">&nbsp;<i class="fa fa-plus-circle"></i>&nbsp;</button>
 	</div>
 </template>
 
