--- a/client/home.html
+++ b/client/home.html
@@ -1,5 +1,5 @@
 <head>
-	<title>La-Mi-Fa</title>
+	<title>LaMiFa</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 
@@ -114,8 +114,8 @@
 	<div id="map" />
 	{{/constant}}<br>
 	<div class="pull-right">
-		<button id="minus" type="button" class="btn btn-lg btn-primary" alt="moins">&nbsp;<i class="fa fa-minus-circle"></i>&nbsp;</button>
-		<button id="plus" type="button" class="btn btn-lg btn-primary" alt="plus">&nbsp;<i class="fa fa-plus-circle"></i>&nbsp;</button>
+		<button id="plus" type="button" class="btn btn-lg btn-default" alt="plus">&nbsp;<i class="fa fa-lg fa-plus-circle"></i>&nbsp;</button>
+		<button id="minus" type="button" class="btn btn-lg btn-default" alt="moins">&nbsp;<i class="fa fa-lg fa-minus-circle"></i>&nbsp;</button>
 	</div>
 </template>
 
