Added cluster markers on map.

--- a/client/home.html
+++ b/client/home.html
@@ -117,6 +117,7 @@
 	{{#constant}}
 	<div id="map" />
 	{{/constant}}<br>
+	{{places.count}}
 	<div class="pull-right">
 		<button id="plus" type="button" class="btn btn-lg btn-default" alt="plus">&nbsp;<i class="fa fa-lg fa-plus-circle"></i>&nbsp;</button>
 		<button id="minus" type="button" class="btn btn-lg btn-default" alt="moins">&nbsp;<i class="fa fa-lg fa-minus-circle"></i>&nbsp;</button>
