--- a/client/home.html
+++ b/client/home.html
@@ -46,11 +46,11 @@
 		</div>
 		<br>
 
-		{{#if matchPlace}}
+		{{#if matchGig}}
 		<br>
 		<div class="col-sm-4 col-xs-12">
 			<div class="list-group">
-				{{#with matchPlace}}
+				{{#with matchGig}}
 				{{> gigItem}}
 				{{/with}}
 			</div>
